--- a/css/form.css
+++ b/css/form.css
@@ -89,6 +89,29 @@
   color: #1F97FF;
   opacity: 1;
 }
+
+#hr_log{
+  position: absolute;
+  height:10px;
+  width: 273.5px;
+  color:white;
+  margin-left: 2.5px;
+  border: none;
+  background-color: white;
+  margin-top: 65px;
+}
+
+#hr_sing{
+  position: absolute;
+  height:10px;
+  width: 296.5px;
+  color:white;
+  margin-left: 2.5px;
+  border: none;
+  background-color: white;
+  margin-top: 65px;
+}
+
 .box-form .form-action {
   background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: inset 0px 3px 6px #00000029;
@@ -99,7 +122,7 @@
   color: #1F97FF;
   text-decoration: none;
 }
-.box-form a:hover {
+a:hover {
   text-decoration: underline;
 }
 .box-form form input[type=email], .box-form form input[type=password], .box-form form input[type=text] {
@@ -178,6 +201,12 @@ input[type="checkbox"]::before {
 input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
+.obbligatorio{
+  display: flex;
+  color: #707070;
+  font: normal normal normal 14px/16px Montserrat;
+  padding-left: 20px;
+}
 #footerLogin label{
   color: #707070;
   font: normal normal normal 14px/16px Montserrat;
@@ -186,7 +215,7 @@ input[type="checkbox"]:checked::before {
 .dimenticata{
   display: block;
   margin-top: 44px!important;
-  font: italic normal 400 12px/16px Montserrat;
+  font: italic normal 400 13.5px/16px Montserrat;
   letter-spacing: 0px;
   color: #1F97FF!important;
   opacity: 1;
