--- a/css/form.css
+++ b/css/form.css
@@ -137,12 +137,18 @@ a:hover {
   font: italic normal normal 18px/29px Montserrat;
   color: #000;
 }
-.box-form form input[type=password]{
+.box-form form #pasw{
   margin-bottom: 17px;
 }
+
+
 .box-form form .pasw{
   width: 343px!important;
   padding-right: 80px;
+  
+}
+.box-form form #conf{
+  margin-bottom: 18px;
 }
 
 .mostra, .mostra:visited{
@@ -314,12 +320,58 @@ input[type="checkbox"]:checked::before {
   color: #58BF38;
   display: block!important;
 }
+
 .erro{
   color: #A53328;
   display: block!important;
 }
 
+.erro::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #A53328;
+  
+}
 
+.resettata{
+  font: normal normal 400 21px/34px Montserrat;
+  color: #5C5C5C;
+  text-align: center;
+  opacity: 1;
+  margin-bottom: 56px;
+}
+
+.circle{
+  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-bottom: 30px;
+  width: 75px;
+  height: 75px;
+  background-color: #58BF38;
+  border-radius: 50%;
+}
+
+.done{
+  padding-top: 18px;
+  font-size: 43px;
+  color: #FFFFFF;
+}
+.bttLogin{
+  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  background: #1F97FF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 10px #00000029;
+  border-radius: 37px;
+  border: none;
+  text-align: center;
+  font: normal normal bold 21px/34px Montserrat;
+  height: 45px;
+  letter-spacing: 0.84px;
+  color: #FFFFFF;
+  cursor: pointer;
+  width: 280px;
+  min-height: 55px!important;
+}
 
 /*********** POPUP ************/
 #popup{
